// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar > should correctly render an AppBar with a MenuItem when the file property is provided > expected html 1`] = `
<div>
  <div
    class="md:bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center order-1 flex w-full bg-slate-700 sm:w-auto"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="menu-label"
        >
          <a
            class="hover:underline"
            data-discover="true"
            href="/fr/mon-tableau-de-bord"
          >
            gcweb:app.title
          </a>
        </span>
      </div>
      <div
        class="order-3 my-2 mr-8 ml-auto w-full sm:order-2 sm:w-auto"
      >
        <a
          class="inline-flex items-center justify-center align-middle no-underline outline-offset-4 px-5 py-2.5 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 rounded border-2 border-[#2B4380] bg-white font-sans text-lg"
          data-discover="true"
          data-gc-analytics-customclick="ESDC-EDSC_MSCA-MDSC-SCH:Nav"
          href="/fr/boite-reception"
          id="inbox-button-desktop"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-envelope mr-2"
            data-icon="envelope"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.5em 0.5em;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform="translate(0, 0)  scale(1.125, 1.125)  rotate(0 0 0)"
              >
                <path
                  d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
          <span>
            gcweb:app.inbox
          </span>
        </a>
      </div>
      <div
        class="ring-blue-hover order-2 flex w-full items-center text-right text-2xl ring-offset-2 focus:ring-2 focus:outline-none sm:order-3 sm:w-[260px]"
      />
    </div>
  </div>
</div>
`;

exports[`AppBar > should correctly render an AppBar with a MenuItem when the to property is provided > expected html 1`] = `
<div>
  <div
    class="md:bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center order-1 flex w-full bg-slate-700 sm:w-auto"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="menu-label"
        >
          <a
            class="hover:underline"
            data-discover="true"
            href="/fr/mon-tableau-de-bord"
          >
            gcweb:app.title
          </a>
        </span>
      </div>
      <div
        class="order-3 my-2 mr-8 ml-auto w-full sm:order-2 sm:w-auto"
      >
        <a
          class="inline-flex items-center justify-center align-middle no-underline outline-offset-4 px-5 py-2.5 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 rounded border-2 border-[#2B4380] bg-white font-sans text-lg"
          data-discover="true"
          data-gc-analytics-customclick="ESDC-EDSC_MSCA-MDSC-SCH:Nav"
          href="/fr/boite-reception"
          id="inbox-button-desktop"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-envelope mr-2"
            data-icon="envelope"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.5em 0.5em;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform="translate(0, 0)  scale(1.125, 1.125)  rotate(0 0 0)"
              >
                <path
                  d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
          <span>
            gcweb:app.inbox
          </span>
        </a>
      </div>
      <div
        class="ring-blue-hover order-2 flex w-full items-center text-right text-2xl ring-offset-2 focus:ring-2 focus:outline-none sm:order-3 sm:w-[260px]"
      />
    </div>
  </div>
</div>
`;

exports[`AppBar > should render render an AppBar with a name provided > expected html 1`] = `
<div>
  <div
    class="md:bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center order-1 flex w-full bg-slate-700 sm:w-auto"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="menu-label"
        >
          <a
            class="hover:underline"
            data-discover="true"
            href="/fr/mon-tableau-de-bord"
          >
            gcweb:app.title
          </a>
        </span>
      </div>
      <div
        class="order-3 my-2 mr-8 ml-auto w-full sm:order-2 sm:w-auto"
      >
        <a
          class="inline-flex items-center justify-center align-middle no-underline outline-offset-4 px-5 py-2.5 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 rounded border-2 border-[#2B4380] bg-white font-sans text-lg"
          data-discover="true"
          data-gc-analytics-customclick="ESDC-EDSC_MSCA-MDSC-SCH:Nav"
          href="/fr/boite-reception"
          id="inbox-button-desktop"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-envelope mr-2"
            data-icon="envelope"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.5em 0.5em;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform="translate(0, 0)  scale(1.125, 1.125)  rotate(0 0 0)"
              >
                <path
                  d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
          <span>
            gcweb:app.inbox
          </span>
        </a>
      </div>
      <div
        class="ring-blue-hover order-2 flex w-full items-center text-right text-2xl ring-offset-2 focus:ring-2 focus:outline-none sm:order-3 sm:w-[260px]"
      />
    </div>
  </div>
</div>
`;

exports[`AppBar > should render render an AppBar with a profile item provided > expected html 1`] = `
<div>
  <div
    class="md:bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center order-1 flex w-full bg-slate-700 sm:w-auto"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="menu-label"
        >
          <a
            class="hover:underline"
            data-discover="true"
            href="/fr/mon-tableau-de-bord"
          >
            gcweb:app.title
          </a>
        </span>
      </div>
      <div
        class="order-3 my-2 mr-8 ml-auto w-full sm:order-2 sm:w-auto"
      >
        <a
          class="inline-flex items-center justify-center align-middle no-underline outline-offset-4 px-5 py-2.5 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 rounded border-2 border-[#2B4380] bg-white font-sans text-lg"
          data-discover="true"
          data-gc-analytics-customclick="ESDC-EDSC_MSCA-MDSC-SCH:Nav"
          href="/fr/boite-reception"
          id="inbox-button-desktop"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-envelope mr-2"
            data-icon="envelope"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="transform-origin: 0.5em 0.5em;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform="translate(0, 0)  scale(1.125, 1.125)  rotate(0 0 0)"
              >
                <path
                  d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
          <span>
            gcweb:app.inbox
          </span>
        </a>
      </div>
      <div
        class="ring-blue-hover order-2 flex w-full items-center text-right text-2xl ring-offset-2 focus:ring-2 focus:outline-none sm:order-3 sm:w-[260px]"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="flex h-full w-full flex-nowrap space-x-2 bg-slate-200 px-2 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 focus:ring-offset-2 focus:outline-hidden aria-expanded:bg-neutral-300 aria-expanded:text-slate-700 sm:space-x-4 sm:px-4 ring-blue-hover focus:ring-blue-hover active:ring-blue-hover ring-offset-2 focus:ring-2 active:ring-2"
          data-state="closed"
          id="radix-_r_0_"
          type="button"
        >
          <div
            class="text-md my-auto flex flex-nowrap items-center space-x-2 py-2"
          >
            <div
              class="flex h-8 w-8 items-center justify-center rounded-full bg-slate-700"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user size-5 text-slate-200"
                data-icon="user"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <span
              class="ring-blue-hover py-2 text-lg font-bold"
              id="menu-label"
            >
              Test User
            </span>
          </div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down my-auto ml-auto size-4"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
